# CFE4D

./: ElectricMagneticEquations.txt  ElectricMagneticEquations_modified.txt  Makefile.in  PrincipalParts.txt  WeylEquation  WeylReplacementTable.txt  aclocal.m4  configure  configure.in  example_bash_profile
rtfiles/: CFE4D.rtparam_L3  CFE4D.rtparam_L4  slurm
src/: CFE4D.c  CFE4D.fparam  CFE4D.h  Makefile.in  apph.c  apph.h  axisym.f  exp.f  g_evo_opt.f  gauge.f  init_ghbdot.f  init_hb.f  init_nm1.f  interp.f  ires.f  mg_sup.f  misc.f
